--- a/todo-kata-introduction.html
+++ b/todo-kata-introduction.html
@@ -24,7 +24,7 @@
 
 <meta name="author" content="James Hart" />
 <meta name="description" content="This post marks the introduction for a code kata series in which we will develop a command-line todo list manager in a few different languages. Each kata will assume a working development environment (I will be working in VS Code on Ubuntu 18.04) and basic familiarity with the syntax …" />
-<meta name="keywords" content="Tutorial, FSharp, Todo, Development">
+<meta name="keywords" content="Tutorial, F#, Todo, Development">
 
 <meta property="og:site_name" content="A Hart's Eye View"/>
 <meta property="og:title" content="Todo Kata - Introduction"/>
@@ -37,7 +37,7 @@
 <meta property="article:author" content="https://jameselliothart.github.io/author/james-hart.html">
 <meta property="article:section" content="Tutorial"/>
 <meta property="article:tag" content="Tutorial"/>
-<meta property="article:tag" content="FSharp"/>
+<meta property="article:tag" content="F#"/>
 <meta property="article:tag" content="Todo"/>
 <meta property="article:tag" content="Development"/>
 <meta property="og:image" content="/images/me.jpeg">
@@ -161,7 +161,7 @@ Since I have always found tutorials a great way to learn some aspect of a langua
   <div class="tag-cloud">
     <p>
       <a href="https://jameselliothart.github.io/tag/tutorial.html">Tutorial</a>
-      <a href="https://jameselliothart.github.io/tag/fsharp.html">FSharp</a>
+      <a href="https://jameselliothart.github.io/tag/f.html">F#</a>
       <a href="https://jameselliothart.github.io/tag/todo.html">Todo</a>
       <a href="https://jameselliothart.github.io/tag/development.html">Development</a>
     </p>
