--- a/maps-of-devops-the-second-way.html
+++ b/maps-of-devops-the-second-way.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" type="text/css" href="https://jameselliothart.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
-    <link href="https://jameselliothart.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A Hart's Eye View Atom">
+    <link href="https://jameselliothart.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A Hart's View Atom">
 
 
 
@@ -26,7 +26,7 @@
 <meta name="description" content="Welcome Welcome to the second post in the Maps of DevOps series! In The First Way, we introduced the scenario of mailing letters to use as a stand-in for delivering software and discussed the necessity of performing our analysis from a system perspective. In doing so, we discovered that Single …" />
 <meta name="keywords" content="DevOps, MapsOfMeaning, TheThreeWays, TheSecondWayOfDevOps, Feedback, APM, Monitoring">
 
-<meta property="og:site_name" content="A Hart's Eye View"/>
+<meta property="og:site_name" content="A Hart's View"/>
 <meta property="og:title" content="Maps of DevOps: The Second Way"/>
 <meta property="og:description" content="Welcome Welcome to the second post in the Maps of DevOps series! In The First Way, we introduced the scenario of mailing letters to use as a stand-in for delivering software and discussed the necessity of performing our analysis from a system perspective. In doing so, we discovered that Single …"/>
 <meta property="og:locale" content="en_US"/>
@@ -45,16 +45,16 @@
 <meta property="article:tag" content="Monitoring"/>
 <meta property="og:image" content="/images/me.jpeg">
 
-  <title>A Hart's Eye View &ndash; Maps of DevOps: The Second Way</title>
+  <title>A Hart's View &ndash; Maps of DevOps: The Second Way</title>
 
 </head>
 <body>
   <aside>
     <div>
       <a href="https://jameselliothart.github.io">
-        <img src="/images/me.jpeg" alt="A Hart's Eye View" title="A Hart's Eye View">
+        <img src="/images/me.jpeg" alt="A Hart's View" title="A Hart's View">
       </a>
-      <h1><a href="https://jameselliothart.github.io">A Hart's Eye View</a></h1>
+      <h1><a href="https://jameselliothart.github.io">A Hart's View</a></h1>
 
 
       <nav>
@@ -238,7 +238,7 @@ Getting this feedback before users complain can make all the difference in being
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " A Hart's Eye View ",
+  "name": " A Hart's View ",
   "url" : "https://jameselliothart.github.io",
   "image": "/images/me.jpeg",
   "description": ""
