--- a/tags.html
+++ b/tags.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" type="text/css" href="https://jameselliothart.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
-    <link href="https://jameselliothart.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A Hart's Eye View Atom">
+    <link href="https://jameselliothart.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A Hart's View Atom">
 
 
 
@@ -24,15 +24,15 @@
 
     <meta name="author" content="James Hart" />
     <meta name="description" content="" />
-<meta property="og:site_name" content="A Hart's Eye View"/>
+<meta property="og:site_name" content="A Hart's View"/>
 <meta property="og:type" content="blog"/>
-<meta property="og:title" content="A Hart's Eye View"/>
+<meta property="og:title" content="A Hart's View"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="https://jameselliothart.github.io"/>
 <meta property="og:image" content="/images/me.jpeg">
 
-  <title>A Hart's Eye View &ndash;     Tags
+  <title>A Hart's View &ndash;     Tags
 </title>
 
 </head>
@@ -40,9 +40,9 @@
   <aside>
     <div>
       <a href="https://jameselliothart.github.io">
-        <img src="/images/me.jpeg" alt="A Hart's Eye View" title="A Hart's Eye View">
+        <img src="/images/me.jpeg" alt="A Hart's View" title="A Hart's View">
       </a>
-      <h1><a href="https://jameselliothart.github.io">A Hart's Eye View</a></h1>
+      <h1><a href="https://jameselliothart.github.io">A Hart's View</a></h1>
 
 
       <nav>
@@ -83,29 +83,32 @@
   </header>
   <div>
     <ul class="list">          <li><a href="https://jameselliothart.github.io/tag/apm.html">APM</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/c.html">C#</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/cicd.html">CICD</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/click.html">click</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/continuousdelivery.html">ContinuousDelivery</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/continuousintegration.html">ContinuousIntegration</a> (1)</li>
-          <li><a href="https://jameselliothart.github.io/tag/continuouslearning.html">ContinuousLearning</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/dapper.html">Dapper</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/development.html">Development</a> (5)</li>
-          <li><a href="https://jameselliothart.github.io/tag/devops.html">DevOps</a> (4)</li>
+          <li><a href="https://jameselliothart.github.io/tag/devops.html">DevOps</a> (3)</li>
           <li><a href="https://jameselliothart.github.io/tag/events.html">Events</a> (1)</li>
-          <li><a href="https://jameselliothart.github.io/tag/f.html">F#</a> (4)</li>
+          <li><a href="https://jameselliothart.github.io/tag/f.html">F#</a> (5)</li>
           <li><a href="https://jameselliothart.github.io/tag/feedback.html">Feedback</a> (1)</li>
-          <li><a href="https://jameselliothart.github.io/tag/mapsofmeaning.html">MapsOfMeaning</a> (4)</li>
+          <li><a href="https://jameselliothart.github.io/tag/functionalprogramming.html">FunctionalProgramming</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/mapsofmeaning.html">MapsOfMeaning</a> (3)</li>
+          <li><a href="https://jameselliothart.github.io/tag/mediatr.html">MediatR</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/monitoring.html">Monitoring</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/mypy.html">mypy</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/net.html">.NET</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/orm.html">ORM</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/patterns.html">Patterns</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/python.html">Python</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/sql.html">SQL</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/sqlite.html">SQLite</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/systemsthinking.html">SystemsThinking</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/thefirstwayofdevops.html">TheFirstWayOfDevOps</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/thesecondwayofdevops.html">TheSecondWayOfDevOps</a> (1)</li>
-          <li><a href="https://jameselliothart.github.io/tag/thethirdwayofdevops.html">TheThirdWayOfDevOps</a> (1)</li>
-          <li><a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a> (4)</li>
+          <li><a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a> (3)</li>
           <li><a href="https://jameselliothart.github.io/tag/todo.html">Todo</a> (5)</li>
           <li><a href="https://jameselliothart.github.io/tag/tutorial.html">Tutorial</a> (5)</li>
     </ul>
@@ -125,7 +128,7 @@
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " A Hart's Eye View ",
+  "name": " A Hart's View ",
   "url" : "https://jameselliothart.github.io",
   "image": "/images/me.jpeg",
   "description": ""
