--- a/todo-kata-fsharp-part-2.html
+++ b/todo-kata-fsharp-part-2.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" type="text/css" href="https://jameselliothart.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
-    <link href="https://jameselliothart.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A Hart's Eye View Atom">
+    <link href="https://jameselliothart.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A Hart's View Atom">
 
 
 
@@ -26,7 +26,7 @@
 <meta name="description" content="In Part 2 of the F# kata, we will implement the todo application. This will allow us to keep track of a todo list, and it will utilize the done functionality we created in the previous post to record the items we complete. Series Outline Intro F# Series Part 1 …" />
 <meta name="keywords" content="Tutorial, F#, Todo, Development, Events">
 
-<meta property="og:site_name" content="A Hart's Eye View"/>
+<meta property="og:site_name" content="A Hart's View"/>
 <meta property="og:title" content="Todo Kata - FSharp Part 2"/>
 <meta property="og:description" content="In Part 2 of the F# kata, we will implement the todo application. This will allow us to keep track of a todo list, and it will utilize the done functionality we created in the previous post to record the items we complete. Series Outline Intro F# Series Part 1 …"/>
 <meta property="og:locale" content="en_US"/>
@@ -43,16 +43,16 @@
 <meta property="article:tag" content="Events"/>
 <meta property="og:image" content="/images/me.jpeg">
 
-  <title>A Hart's Eye View &ndash; Todo Kata - FSharp Part 2</title>
+  <title>A Hart's View &ndash; Todo Kata - FSharp Part 2</title>
 
 </head>
 <body>
   <aside>
     <div>
       <a href="https://jameselliothart.github.io">
-        <img src="/images/me.jpeg" alt="A Hart's Eye View" title="A Hart's Eye View">
+        <img src="/images/me.jpeg" alt="A Hart's View" title="A Hart's View">
       </a>
-      <h1><a href="https://jameselliothart.github.io">A Hart's Eye View</a></h1>
+      <h1><a href="https://jameselliothart.github.io">A Hart's View</a></h1>
 
 
       <nav>
@@ -439,7 +439,7 @@ dotnet run
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " A Hart's Eye View ",
+  "name": " A Hart's View ",
   "url" : "https://jameselliothart.github.io",
   "image": "/images/me.jpeg",
   "description": ""
