--- a/todo-kata-introduction.html
+++ b/todo-kata-introduction.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" type="text/css" href="https://jameselliothart.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
-    <link href="https://jameselliothart.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A Hart's Eye View Atom">
+    <link href="https://jameselliothart.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A Hart's View Atom">
 
 
 
@@ -26,7 +26,7 @@
 <meta name="description" content="This post marks the introduction for a code kata series in which we will develop a command-line todo list manager in a few different languages. Each kata will assume a working development environment (I will be working in VS Code on Ubuntu 18.04) and basic familiarity with the syntax …" />
 <meta name="keywords" content="Tutorial, F#, Todo, Development">
 
-<meta property="og:site_name" content="A Hart's Eye View"/>
+<meta property="og:site_name" content="A Hart's View"/>
 <meta property="og:title" content="Todo Kata - Introduction"/>
 <meta property="og:description" content="This post marks the introduction for a code kata series in which we will develop a command-line todo list manager in a few different languages. Each kata will assume a working development environment (I will be working in VS Code on Ubuntu 18.04) and basic familiarity with the syntax …"/>
 <meta property="og:locale" content="en_US"/>
@@ -42,16 +42,16 @@
 <meta property="article:tag" content="Development"/>
 <meta property="og:image" content="/images/me.jpeg">
 
-  <title>A Hart's Eye View &ndash; Todo Kata - Introduction</title>
+  <title>A Hart's View &ndash; Todo Kata - Introduction</title>
 
 </head>
 <body>
   <aside>
     <div>
       <a href="https://jameselliothart.github.io">
-        <img src="/images/me.jpeg" alt="A Hart's Eye View" title="A Hart's Eye View">
+        <img src="/images/me.jpeg" alt="A Hart's View" title="A Hart's View">
       </a>
-      <h1><a href="https://jameselliothart.github.io">A Hart's Eye View</a></h1>
+      <h1><a href="https://jameselliothart.github.io">A Hart's View</a></h1>
 
 
       <nav>
@@ -186,7 +186,7 @@ Since I have always found tutorials a great way to learn some aspect of a langua
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " A Hart's Eye View ",
+  "name": " A Hart's View ",
   "url" : "https://jameselliothart.github.io",
   "image": "/images/me.jpeg",
   "description": ""
