--- a/archives.html
+++ b/archives.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" type="text/css" href="https://jameselliothart.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
-    <link href="https://jameselliothart.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A Hart's Eye View Atom">
+    <link href="https://jameselliothart.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A Hart's View Atom">
 
 
 
@@ -24,15 +24,15 @@
 
     <meta name="author" content="James Hart" />
     <meta name="description" content="" />
-<meta property="og:site_name" content="A Hart's Eye View"/>
+<meta property="og:site_name" content="A Hart's View"/>
 <meta property="og:type" content="blog"/>
-<meta property="og:title" content="A Hart's Eye View"/>
+<meta property="og:title" content="A Hart's View"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="https://jameselliothart.github.io"/>
 <meta property="og:image" content="/images/me.jpeg">
 
-  <title>A Hart's Eye View &ndash;     Archives
+  <title>A Hart's View &ndash;     Archives
 </title>
 
 </head>
@@ -40,9 +40,9 @@
   <aside>
     <div>
       <a href="https://jameselliothart.github.io">
-        <img src="/images/me.jpeg" alt="A Hart's Eye View" title="A Hart's Eye View">
+        <img src="/images/me.jpeg" alt="A Hart's View" title="A Hart's View">
       </a>
-      <h1><a href="https://jameselliothart.github.io">A Hart's Eye View</a></h1>
+      <h1><a href="https://jameselliothart.github.io">A Hart's View</a></h1>
 
 
       <nav>
@@ -83,6 +83,8 @@
   </header>
   <div>
     <dl>
+      <dt>October 24, 2020</dt>
+      <dd><a href="https://jameselliothart.github.io/mediatr-vs-discriminated-unions.html">MediatR vs Discriminated Unions</a></dd>
       <dt>October 11, 2020</dt>
       <dd><a href="https://jameselliothart.github.io/todo-kata-python-part-1.html">Todo Kata - Python Part 1</a></dd>
       <dt>October 07, 2020</dt>
@@ -93,8 +95,6 @@
       <dd><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-1.html">Todo Kata - FSharp Part 1</a></dd>
       <dt>October 04, 2020</dt>
       <dd><a href="https://jameselliothart.github.io/todo-kata-introduction.html">Todo Kata - Introduction</a></dd>
-      <dt>May 29, 2020</dt>
-      <dd><a href="https://jameselliothart.github.io/maps-of-devops-the-third-way.html">Maps of DevOps: The Third Way</a></dd>
       <dt>May 19, 2020</dt>
       <dd><a href="https://jameselliothart.github.io/maps-of-devops-the-second-way.html">Maps of DevOps: The Second Way</a></dd>
       <dt>December 08, 2019</dt>
@@ -102,7 +102,7 @@
       <dt>October 25, 2019</dt>
       <dd><a href="https://jameselliothart.github.io/maps-of-devops-introduction.html">Maps of DevOps: Introduction</a></dd>
       <dt>October 22, 2019</dt>
-      <dd><a href="https://jameselliothart.github.io/first-post-on-a-harts-eye-view.html">First Post on A Hart's Eye View</a></dd>
+      <dd><a href="https://jameselliothart.github.io/first-post.html">First Post</a></dd>
     </dl>
   </div>
 </article>
@@ -120,7 +120,7 @@
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " A Hart's Eye View ",
+  "name": " A Hart's View ",
   "url" : "https://jameselliothart.github.io",
   "image": "/images/me.jpeg",
   "description": ""
