--- a/first-post.html
+++ b/first-post.html
@@ -22,18 +22,23 @@
 
 
 
-    <meta name="author" content="James Hart" />
-    <meta name="description" content="" />
+<meta name="author" content="James Hart" />
+<meta name="description" content="Beginning at the Beginning Hello World! This is my first post on my new blog. If you&#39;re reading this, the proof of concept was a success, and you can look forward to more content in the future!" />
+<meta name="keywords" content="">
+
 <meta property="og:site_name" content="A Hart's View"/>
-<meta property="og:type" content="blog"/>
-<meta property="og:title" content="A Hart's View"/>
-<meta property="og:description" content=""/>
+<meta property="og:title" content="First Post"/>
+<meta property="og:description" content="Beginning at the Beginning Hello World! This is my first post on my new blog. If you&#39;re reading this, the proof of concept was a success, and you can look forward to more content in the future!"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://jameselliothart.github.io"/>
+<meta property="og:url" content="https://jameselliothart.github.io/first-post.html"/>
+<meta property="og:type" content="article"/>
+<meta property="article:published_time" content="2019-10-22 00:00:00-05:00"/>
+<meta property="article:modified_time" content=""/>
+<meta property="article:author" content="https://jameselliothart.github.io/author/james-hart.html">
+<meta property="article:section" content="Announcements"/>
 <meta property="og:image" content="/images/me.jpeg">
 
-  <title>A Hart's View &ndash;     Tag CICD
-</title>
+  <title>A Hart's View &ndash; First Post</title>
 
 </head>
 <body>
@@ -76,37 +81,34 @@
 
     </nav>
 
-
-
-<article>
+<article class="single">
   <header>
-    <h2><a href="https://jameselliothart.github.io/maps-of-devops-the-first-way.html#maps-of-devops-the-first-way">Maps of DevOps: The First Way</a></h2>
+      
+    <h1 id="first-post">First Post</h1>
     <p>
-          Posted on December 08, 2019 in <a href="https://jameselliothart.github.io/category/devops.html">DevOps</a>
+          Posted on October 22, 2019 in <a href="https://jameselliothart.github.io/category/announcements.html">Announcements</a>
 
-
-          &#8226;     Tagged with
-
-              <a href="https://jameselliothart.github.io/tag/devops.html">DevOps</a>,              <a href="https://jameselliothart.github.io/tag/mapsofmeaning.html">MapsOfMeaning</a>,              <a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a>,              <a href="https://jameselliothart.github.io/tag/thefirstwayofdevops.html">TheFirstWayOfDevOps</a>,              <a href="https://jameselliothart.github.io/tag/systemsthinking.html">SystemsThinking</a>,              <a href="https://jameselliothart.github.io/tag/cicd.html">CICD</a>,              <a href="https://jameselliothart.github.io/tag/continuousintegration.html">ContinuousIntegration</a>,              <a href="https://jameselliothart.github.io/tag/continuousdelivery.html">ContinuousDelivery</a>
+          </br>
     </p>
   </header>
+
+
   <div>
-      <h2>Welcome</h2>
-<p>Welcome to the second post in the Maps of DevOps series!
-In this installment, we will explore The First Way: Systems Thinking.</p>
-<h2>Motivating Scenario: Mailing Letters</h2>
-<p>In an attempt to avoid the obfuscating effect of technical jargon, we will use a technology-agnostic scenario as the stage within which to …</p>
-      <br>
-      <a class="btn" href="https://jameselliothart.github.io/maps-of-devops-the-first-way.html#maps-of-devops-the-first-way">    Continue reading
-</a>
+    <h1>Beginning at the Beginning</h1>
+<p>Hello World! This is my first post on my new blog. If you're
+reading this, the proof of concept was a success, and you can
+look forward to more content in the future!</p>
   </div>
+  <div class="tag-cloud">
+    <p>
+    </p>
+  </div>
+
+
+
+
+
 </article>
-
-  <div class="pagination">
-  </div>
-
-
-
 
     <footer>
 <p>&copy; James Hart 2020</p>
