--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" type="text/css" href="https://jameselliothart.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
-    <link href="https://jameselliothart.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A Hart's Eye View Atom">
+    <link href="https://jameselliothart.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A Hart's View Atom">
 
 
 
@@ -24,24 +24,24 @@
 
     <meta name="author" content="James Hart" />
     <meta name="description" content="" />
-<meta property="og:site_name" content="A Hart's Eye View"/>
+<meta property="og:site_name" content="A Hart's View"/>
 <meta property="og:type" content="blog"/>
-<meta property="og:title" content="A Hart's Eye View"/>
+<meta property="og:title" content="A Hart's View"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="https://jameselliothart.github.io"/>
 <meta property="og:image" content="/images/me.jpeg">
 
-  <title>A Hart's Eye View</title>
+  <title>A Hart's View</title>
 
 </head>
 <body>
   <aside>
     <div>
       <a href="https://jameselliothart.github.io">
-        <img src="/images/me.jpeg" alt="A Hart's Eye View" title="A Hart's Eye View">
+        <img src="/images/me.jpeg" alt="A Hart's View" title="A Hart's View">
       </a>
-      <h1><a href="https://jameselliothart.github.io">A Hart's Eye View</a></h1>
+      <h1><a href="https://jameselliothart.github.io">A Hart's View</a></h1>
 
 
       <nav>
@@ -77,6 +77,27 @@
 
 
 
+<article>
+  <header>
+    <h2><a href="https://jameselliothart.github.io/mediatr-vs-discriminated-unions.html#mediatr-vs-discriminated-unions">MediatR vs Discriminated Unions</a></h2>
+    <p>
+          Posted on October 24, 2020 in <a href="https://jameselliothart.github.io/category/development.html">Development</a>
+
+
+          &#8226;     Tagged with
+
+              <a href="https://jameselliothart.github.io/tag/mediatr.html">MediatR</a>,              <a href="https://jameselliothart.github.io/tag/net.html">.NET</a>,              <a href="https://jameselliothart.github.io/tag/c.html">C#</a>,              <a href="https://jameselliothart.github.io/tag/f.html">F#</a>,              <a href="https://jameselliothart.github.io/tag/patterns.html">Patterns</a>,              <a href="https://jameselliothart.github.io/tag/functionalprogramming.html">FunctionalProgramming</a>
+    </p>
+  </header>
+  <div>
+      <p>In this post, I will compare and contrast what the <a href="https://github.com/jbogard/MediatR">MediatR</a> makes possible in C# with what we can achieve natively in F# with <a href="https://docs.microsoft.com/en-us/dotnet/fsharp/language-reference/discriminated-unions">discriminated unions</a>.
+This is not meant to be an exhaustive review of the features and capabilities of MediatR or what is possible with functional techniques, just …</p>
+      <br>
+      <a class="btn" href="https://jameselliothart.github.io/mediatr-vs-discriminated-unions.html#mediatr-vs-discriminated-unions">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
 <article>
   <header>
     <h2><a href="https://jameselliothart.github.io/todo-kata-python-part-1.html#todo-kata-python-part-1">Todo Kata - Python Part 1</a></h2>
@@ -196,29 +217,6 @@ Each kata will assume a working development environment (I will be working in <a
 </article>
 <article>
   <header>
-    <h2><a href="https://jameselliothart.github.io/maps-of-devops-the-third-way.html#maps-of-devops-the-third-way">Maps of DevOps: The Third Way</a></h2>
-    <p>
-          Posted on May 29, 2020 in <a href="https://jameselliothart.github.io/category/devops.html">DevOps</a>
-
-
-          &#8226;     Tagged with
-
-              <a href="https://jameselliothart.github.io/tag/devops.html">DevOps</a>,              <a href="https://jameselliothart.github.io/tag/mapsofmeaning.html">MapsOfMeaning</a>,              <a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a>,              <a href="https://jameselliothart.github.io/tag/thethirdwayofdevops.html">TheThirdWayOfDevOps</a>,              <a href="https://jameselliothart.github.io/tag/continuouslearning.html">ContinuousLearning</a>
-    </p>
-  </header>
-  <div>
-      <h2>Welcome</h2>
-<p>Welcome to the third and final post in the Maps of DevOps series!
-In <a href="maps-of-devops-the-first-way">The First Way: Systems Thinking</a> we used a mock scenario of mailing letters to demonstrate the importance of completing a finished product (sealed and mailed letters) over accumulating inventory (folded paper).
-We used this as …</p>
-      <br>
-      <a class="btn" href="https://jameselliothart.github.io/maps-of-devops-the-third-way.html#maps-of-devops-the-third-way">    Continue reading
-</a>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
     <h2><a href="https://jameselliothart.github.io/maps-of-devops-the-second-way.html#maps-of-devops-the-second-way">Maps of DevOps: The Second Way</a></h2>
     <p>
           Posted on May 19, 2020 in <a href="https://jameselliothart.github.io/category/devops.html">DevOps</a>
@@ -292,7 +290,7 @@ understand the principles behind what …</p>
 </article>
 <article>
   <header>
-    <h2><a href="https://jameselliothart.github.io/first-post-on-a-harts-eye-view.html#first-post-on-a-harts-eye-view">First Post on A Hart's Eye View</a></h2>
+    <h2><a href="https://jameselliothart.github.io/first-post.html#first-post">First Post</a></h2>
     <p>
           Posted on October 22, 2019 in <a href="https://jameselliothart.github.io/category/announcements.html">Announcements</a>
 
@@ -306,7 +304,7 @@ understand the principles behind what …</p>
 reading this, the proof of concept was a success, and you can
 look forward to more content in the future!</p>
       <br>
-      <a class="btn" href="https://jameselliothart.github.io/first-post-on-a-harts-eye-view.html#first-post-on-a-harts-eye-view">    Continue reading
+      <a class="btn" href="https://jameselliothart.github.io/first-post.html#first-post">    Continue reading
 </a>
   </div>
 </article>
@@ -330,7 +328,7 @@ look forward to more content in the future!</p>
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " A Hart's Eye View ",
+  "name": " A Hart's View ",
   "url" : "https://jameselliothart.github.io",
   "image": "/images/me.jpeg",
   "description": ""
