--- a/maps-of-devops-introduction.html
+++ b/maps-of-devops-introduction.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" type="text/css" href="https://jameselliothart.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
-    <link href="https://jameselliothart.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A Hart's Eye View Atom">
+    <link href="https://jameselliothart.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A Hart's View Atom">
 
 
 
@@ -26,7 +26,7 @@
 <meta name="description" content="Welcome This post marks the beginning of a multi-part series explaining the ideas of DevOps (that is, Development Operations). The target audience is primarily those unfamiliar with DevOps, and it is meant to be friendly even to those without a technical background who seek to understand the principles behind what …" />
 <meta name="keywords" content="DevOps, MapsOfMeaning, TheThreeWays">
 
-<meta property="og:site_name" content="A Hart's Eye View"/>
+<meta property="og:site_name" content="A Hart's View"/>
 <meta property="og:title" content="Maps of DevOps: Introduction"/>
 <meta property="og:description" content="Welcome This post marks the beginning of a multi-part series explaining the ideas of DevOps (that is, Development Operations). The target audience is primarily those unfamiliar with DevOps, and it is meant to be friendly even to those without a technical background who seek to understand the principles behind what …"/>
 <meta property="og:locale" content="en_US"/>
@@ -41,16 +41,16 @@
 <meta property="article:tag" content="TheThreeWays"/>
 <meta property="og:image" content="/images/me.jpeg">
 
-  <title>A Hart's Eye View &ndash; Maps of DevOps: Introduction</title>
+  <title>A Hart's View &ndash; Maps of DevOps: Introduction</title>
 
 </head>
 <body>
   <aside>
     <div>
       <a href="https://jameselliothart.github.io">
-        <img src="/images/me.jpeg" alt="A Hart's Eye View" title="A Hart's Eye View">
+        <img src="/images/me.jpeg" alt="A Hart's View" title="A Hart's View">
       </a>
-      <h1><a href="https://jameselliothart.github.io">A Hart's Eye View</a></h1>
+      <h1><a href="https://jameselliothart.github.io">A Hart's View</a></h1>
 
 
       <nav>
@@ -218,7 +218,7 @@ that ground in due time.</p>
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " A Hart's Eye View ",
+  "name": " A Hart's View ",
   "url" : "https://jameselliothart.github.io",
   "image": "/images/me.jpeg",
   "description": ""
