--- a/maps-of-devops-the-first-way.html
+++ b/maps-of-devops-the-first-way.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" type="text/css" href="https://jameselliothart.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
-    <link href="https://jameselliothart.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A Hart's Eye View Atom">
+    <link href="https://jameselliothart.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="A Hart's View Atom">
 
 
 
@@ -26,7 +26,7 @@
 <meta name="description" content="Welcome Welcome to the second post in the Maps of DevOps series! In this installment, we will explore The First Way: Systems Thinking. Motivating Scenario: Mailing Letters In an attempt to avoid the obfuscating effect of technical jargon, we will use a technology-agnostic scenario as the stage within which to …" />
 <meta name="keywords" content="DevOps, MapsOfMeaning, TheThreeWays, TheFirstWayOfDevOps, SystemsThinking, CICD, ContinuousIntegration, ContinuousDelivery">
 
-<meta property="og:site_name" content="A Hart's Eye View"/>
+<meta property="og:site_name" content="A Hart's View"/>
 <meta property="og:title" content="Maps of DevOps: The First Way"/>
 <meta property="og:description" content="Welcome Welcome to the second post in the Maps of DevOps series! In this installment, we will explore The First Way: Systems Thinking. Motivating Scenario: Mailing Letters In an attempt to avoid the obfuscating effect of technical jargon, we will use a technology-agnostic scenario as the stage within which to …"/>
 <meta property="og:locale" content="en_US"/>
@@ -46,16 +46,16 @@
 <meta property="article:tag" content="ContinuousDelivery"/>
 <meta property="og:image" content="/images/me.jpeg">
 
-  <title>A Hart's Eye View &ndash; Maps of DevOps: The First Way</title>
+  <title>A Hart's View &ndash; Maps of DevOps: The First Way</title>
 
 </head>
 <body>
   <aside>
     <div>
       <a href="https://jameselliothart.github.io">
-        <img src="/images/me.jpeg" alt="A Hart's Eye View" title="A Hart's Eye View">
+        <img src="/images/me.jpeg" alt="A Hart's View" title="A Hart's View">
       </a>
-      <h1><a href="https://jameselliothart.github.io">A Hart's Eye View</a></h1>
+      <h1><a href="https://jameselliothart.github.io">A Hart's View</a></h1>
 
 
       <nav>
@@ -146,15 +146,15 @@ The tasks involved are as follows:</p>
 <p>Where the "development" and "operations" teams can refer to those organizations within a company, to individual developers and operations engineers, or even to the multiple roles a single person can fill.
 Indeed, how the dynamics change with each of these interpretations is something else to keep in mind.</p>
 <blockquote>
-<p>People in systems do not do what the system says they are doing<br>
--The Functionary's Falsity, John Gall, <em>Systemantics: How Systems Work and Especially How They Fail</em></p>
+<p>People in systems do not do what the system says they are doing</p>
+<p>-The Functionary's Falsity, John Gall, <em>Systemantics: How Systems Work and Especially How They Fail</em></p>
 </blockquote>
 <p>One person performing all of these tasks could reasonably be said to be sending letters (i.e. delivering valuable applications).
 However, once a system is set up and tasks split between people, there are only paper folders (developers writing code) and envelope sealers (operations team deploying binaries).
 It is now the system which is sending letters and not any individual within it.</p>
 <blockquote>
-<p>The function performed by a system is not operationally identical to the function of the same name performed by a person<br>
--The Operational Fallacy (long form), John Gall, <em>Systemantics</em></p>
+<p>The function performed by a system is not operationally identical to the function of the same name performed by a person</p>
+<p>-The Operational Fallacy (long form), John Gall, <em>Systemantics</em></p>
 </blockquote>
 <p>In this light, it is entirely reasonable to imagine - as indeed does happen - that the system is in fact producing mounds of folded paper which either does not fit in or is more numerous than the given size or number of envelopes.
 Thus, a system operating under this structure may not be sending letters at all.
@@ -170,7 +170,7 @@ This is the landscape you inhabit when you know what you are doing:</p>
 </ul>
 <p><img src="https://jameselliothart.github.io/images/maps-of-devops-first/TheKnown.jpg" width="500"></p>
 <p>Why is it appropriate to call this a map?
-It is a map in the sense that it describes where you are, where you are going, and how to get there even though those "places" are not exactly physical.
+It is a map in the sense that it describes where you are, where you are going, and how to get there even though those "places" may not be physical.
 A mental map is no less real simply because it does not take up physical space or guide you to a physical address.
 Contrast this with Unknown (or Unexplored) Territory: you do not know where you are, what you are doing, or where you need to go (more on this later).</p>
 <p>This leads to our first key insight: A business inhabits the same existential landscape.
@@ -184,8 +184,8 @@ However, seen within the broader perspective of the organization as a whole, thi
 <h2>The First Way: Systems Thinking</h2>
 <p><img alt="The First Way" src="https://jameselliothart.github.io/images/maps-of-devops-first/TheFirstWay.png"></p>
 <blockquote>
-<p>Stop Starting. Start Finishing.<br>
--David J. Anderson</p>
+<p>Stop Starting. Start Finishing.</p>
+<p>-David J. Anderson</p>
 </blockquote>
 <p>Applying this framework to our mailing letters scenario, we have:</p>
 <ul>
@@ -264,7 +264,7 @@ The CI/CD pipeline provides consistency and visibility to a process that otherwi
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " A Hart's Eye View ",
+  "name": " A Hart's View ",
   "url" : "https://jameselliothart.github.io",
   "image": "/images/me.jpeg",
   "description": ""
