todo kata python part 2

--- a/tags.html
+++ b/tags.html
@@ -85,11 +85,11 @@
     <ul class="list">          <li><a href="https://jameselliothart.github.io/tag/apm.html">APM</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/c.html">C#</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/cicd.html">CICD</a> (1)</li>
-          <li><a href="https://jameselliothart.github.io/tag/click.html">click</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/click.html">click</a> (2)</li>
           <li><a href="https://jameselliothart.github.io/tag/continuousdelivery.html">ContinuousDelivery</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/continuousintegration.html">ContinuousIntegration</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/dapper.html">Dapper</a> (1)</li>
-          <li><a href="https://jameselliothart.github.io/tag/development.html">Development</a> (5)</li>
+          <li><a href="https://jameselliothart.github.io/tag/development.html">Development</a> (6)</li>
           <li><a href="https://jameselliothart.github.io/tag/devops.html">DevOps</a> (3)</li>
           <li><a href="https://jameselliothart.github.io/tag/events.html">Events</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/f.html">F#</a> (5)</li>
@@ -98,19 +98,21 @@
           <li><a href="https://jameselliothart.github.io/tag/mapsofmeaning.html">MapsOfMeaning</a> (3)</li>
           <li><a href="https://jameselliothart.github.io/tag/mediatr.html">MediatR</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/monitoring.html">Monitoring</a> (1)</li>
-          <li><a href="https://jameselliothart.github.io/tag/mypy.html">mypy</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/mypy.html">mypy</a> (2)</li>
           <li><a href="https://jameselliothart.github.io/tag/net.html">.NET</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/orm.html">ORM</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/patterns.html">Patterns</a> (1)</li>
-          <li><a href="https://jameselliothart.github.io/tag/python.html">Python</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/python.html">Python</a> (2)</li>
+          <li><a href="https://jameselliothart.github.io/tag/reactiveprogramming.html">ReactiveProgramming</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/rxpy.html">RxPY</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/sql.html">SQL</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/sqlite.html">SQLite</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/systemsthinking.html">SystemsThinking</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/thefirstwayofdevops.html">TheFirstWayOfDevOps</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/thesecondwayofdevops.html">TheSecondWayOfDevOps</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a> (3)</li>
-          <li><a href="https://jameselliothart.github.io/tag/todo.html">Todo</a> (5)</li>
-          <li><a href="https://jameselliothart.github.io/tag/tutorial.html">Tutorial</a> (5)</li>
+          <li><a href="https://jameselliothart.github.io/tag/todo.html">Todo</a> (6)</li>
+          <li><a href="https://jameselliothart.github.io/tag/tutorial.html">Tutorial</a> (6)</li>
     </ul>
   </div>
 </article>
