--- a/drafts/markdown-and-pandoc.html
+++ b/drafts/markdown-and-pandoc.html
@@ -22,18 +22,27 @@
 
 
 
-    <meta name="author" content="James Hart" />
-    <meta name="description" content="" />
+<meta name="author" content="James Hart" />
+<meta name="description" content="problem source controlling documentation catering to different formats (.docx for management, wiki page, text for easy copy/paste) teaser demo solution what is markdown? what is pandoc? from &#34;pan-&#34; meaning all and &#34;-document&#34; how to use this" />
+<meta name="keywords" content="Markdown, Pandoc, Tips, Productivity">
+
 <meta property="og:site_name" content="A Hart's View"/>
-<meta property="og:type" content="blog"/>
-<meta property="og:title" content="A Hart's View"/>
-<meta property="og:description" content=""/>
+<meta property="og:title" content="Markdown and Pandoc"/>
+<meta property="og:description" content="problem source controlling documentation catering to different formats (.docx for management, wiki page, text for easy copy/paste) teaser demo solution what is markdown? what is pandoc? from &#34;pan-&#34; meaning all and &#34;-document&#34; how to use this"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://jameselliothart.github.io"/>
+<meta property="og:url" content="https://jameselliothart.github.io/drafts/markdown-and-pandoc.html"/>
+<meta property="og:type" content="article"/>
+<meta property="article:published_time" content="2020-10-27 00:00:00-05:00"/>
+<meta property="article:modified_time" content=""/>
+<meta property="article:author" content="https://jameselliothart.github.io/author/james-hart.html">
+<meta property="article:section" content="Productivity"/>
+<meta property="article:tag" content="Markdown"/>
+<meta property="article:tag" content="Pandoc"/>
+<meta property="article:tag" content="Tips"/>
+<meta property="article:tag" content="Productivity"/>
 <meta property="og:image" content="/images/me.jpeg">
 
-  <title>A Hart's View &ndash;     Archives
-</title>
+  <title>A Hart's View &ndash; Markdown and Pandoc</title>
 
 </head>
 <body>
@@ -78,35 +87,41 @@
 
 <article class="single">
   <header>
-    <h1>    Archives
-</h1>
+      
+    <h1 id="markdown-and-pandoc">Markdown and Pandoc</h1>
+    <p>
+          Posted on October 27, 2020 in <a href="https://jameselliothart.github.io/category/productivity.html">Productivity</a>
+
+          </br>
+    </p>
   </header>
+
+
   <div>
-    <dl>
-      <dt>October 28, 2020</dt>
-      <dd><a href="https://jameselliothart.github.io/todo-kata-python-part-2.html">Todo Kata - Python Part 2</a></dd>
-      <dt>October 24, 2020</dt>
-      <dd><a href="https://jameselliothart.github.io/mediatr-vs-discriminated-unions.html">MediatR vs Discriminated Unions</a></dd>
-      <dt>October 11, 2020</dt>
-      <dd><a href="https://jameselliothart.github.io/todo-kata-python-part-1.html">Todo Kata - Python Part 1</a></dd>
-      <dt>October 07, 2020</dt>
-      <dd><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-3.html">Todo Kata - FSharp Part 3</a></dd>
-      <dt>October 06, 2020</dt>
-      <dd><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-2.html">Todo Kata - FSharp Part 2</a></dd>
-      <dt>October 05, 2020</dt>
-      <dd><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-1.html">Todo Kata - FSharp Part 1</a></dd>
-      <dt>October 04, 2020</dt>
-      <dd><a href="https://jameselliothart.github.io/todo-kata-introduction.html">Todo Kata - Introduction</a></dd>
-      <dt>May 19, 2020</dt>
-      <dd><a href="https://jameselliothart.github.io/maps-of-devops-the-second-way.html">Maps of DevOps: The Second Way</a></dd>
-      <dt>December 08, 2019</dt>
-      <dd><a href="https://jameselliothart.github.io/maps-of-devops-the-first-way.html">Maps of DevOps: The First Way</a></dd>
-      <dt>October 25, 2019</dt>
-      <dd><a href="https://jameselliothart.github.io/maps-of-devops-introduction.html">Maps of DevOps: Introduction</a></dd>
-      <dt>October 22, 2019</dt>
-      <dd><a href="https://jameselliothart.github.io/first-post.html">First Post</a></dd>
-    </dl>
+    <ul>
+<li>problem</li>
+<li>source controlling documentation</li>
+<li>catering to different formats (.docx for management, wiki page, text for easy copy/paste)</li>
+<li>teaser demo solution</li>
+<li>what is <a href="https://www.markdownguide.org/">markdown</a>?</li>
+<li>what is <a href="https://pandoc.org/">pandoc</a>?</li>
+<li>from "pan-" meaning <a href="https://www.merriam-webster.com/dictionary/pan">all</a> and "-document"</li>
+<li>how to use this</li>
+</ul>
   </div>
+  <div class="tag-cloud">
+    <p>
+      <a href="https://jameselliothart.github.io/tag/markdown.html">Markdown</a>
+      <a href="https://jameselliothart.github.io/tag/pandoc.html">Pandoc</a>
+      <a href="https://jameselliothart.github.io/tag/tips.html">Tips</a>
+      <a href="https://jameselliothart.github.io/tag/productivity.html">Productivity</a>
+    </p>
+  </div>
+
+
+
+
+
 </article>
 
     <footer>
