--- a/index.html
+++ b/index.html
@@ -79,6 +79,32 @@
 
 <article>
   <header>
+    <h2><a href="https://jameselliothart.github.io/todo-kata-python-part-2.html#todo-kata-python-part-2">Todo Kata - Python Part 2</a></h2>
+    <p>
+          Posted on October 28, 2020 in <a href="https://jameselliothart.github.io/category/tutorial.html">Tutorial</a>
+
+
+          &#8226;     Tagged with
+
+              <a href="https://jameselliothart.github.io/tag/tutorial.html">Tutorial</a>,              <a href="https://jameselliothart.github.io/tag/python.html">Python</a>,              <a href="https://jameselliothart.github.io/tag/todo.html">Todo</a>,              <a href="https://jameselliothart.github.io/tag/development.html">Development</a>,              <a href="https://jameselliothart.github.io/tag/mypy.html">mypy</a>,              <a href="https://jameselliothart.github.io/tag/click.html">click</a>,              <a href="https://jameselliothart.github.io/tag/rxpy.html">RxPY</a>,              <a href="https://jameselliothart.github.io/tag/reactiveprogramming.html">ReactiveProgramming</a>
+    </p>
+  </header>
+  <div>
+      <p>In Part 2 of the Python kata, we will implement the <code>todo</code> application.
+This will allow us to keep track of a todo list, and it will utilize the <code>done</code> functionality we created in the previous post to record the items we complete.</p>
+<p>Series Outline</p>
+<ol>
+<li><a href="todo-kata-introduction">Intro</a></li>
+<li>F# Series<ol>
+<li><a href="todo-kata-fsharp-part-1">Part 1 …</a></li></ol></li></ol>
+      <br>
+      <a class="btn" href="https://jameselliothart.github.io/todo-kata-python-part-2.html#todo-kata-python-part-2">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="https://jameselliothart.github.io/mediatr-vs-discriminated-unions.html#mediatr-vs-discriminated-unions">MediatR vs Discriminated Unions</a></h2>
     <p>
           Posted on October 24, 2020 in <a href="https://jameselliothart.github.io/category/development.html">Development</a>
@@ -286,30 +312,13 @@ understand the principles behind what …</p>
       <a class="btn" href="https://jameselliothart.github.io/maps-of-devops-introduction.html#maps-of-devops-introduction">    Continue reading
 </a>
   </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="https://jameselliothart.github.io/first-post.html#first-post">First Post</a></h2>
-    <p>
-          Posted on October 22, 2019 in <a href="https://jameselliothart.github.io/category/announcements.html">Announcements</a>
-
-
-
-    </p>
-  </header>
-  <div>
-      <h1>Beginning at the Beginning</h1>
-<p>Hello World! This is my first post on my new blog. If you're
-reading this, the proof of concept was a success, and you can
-look forward to more content in the future!</p>
-      <br>
-      <a class="btn" href="https://jameselliothart.github.io/first-post.html#first-post">    Continue reading
-</a>
-  </div>
 </article>
 
   <div class="pagination">
+    <a class="btn float-left" href="https://jameselliothart.github.io/index2.html">
+      <i class="fa fa-angle-left"></i>     Older Posts
+
+    </a>
   </div>
 
 
