--- a/todo-kata-python-part-1.html
+++ b/todo-kata-python-part-1.html
@@ -371,7 +371,7 @@ We can run the program with commands like this:</p>
 
 <h2>Wrapping Up</h2>
 <p>That wraps up the Python implementation of <code>done</code>.
-Next we will cover <code>todo</code> and get a small look at reactive programming with <code>RxPy</code>.</p>
+Next we will cover <code>todo</code> and get a small look at reactive programming with <a href="https://github.com/ReactiveX/RxPY">RxPY</a>.</p>
   </div>
   <div class="tag-cloud">
     <p>
