--- a/archives.html
+++ b/archives.html
@@ -83,6 +83,8 @@
   </header>
   <div>
     <dl>
+      <dt>October 30, 2020</dt>
+      <dd><a href="https://jameselliothart.github.io/todo-kata-python-part-3.html">Todo Kata - Python Part 3</a></dd>
       <dt>October 28, 2020</dt>
       <dd><a href="https://jameselliothart.github.io/todo-kata-python-part-2.html">Todo Kata - Python Part 2</a></dd>
       <dt>October 24, 2020</dt>
