--- a/index.html
+++ b/index.html
@@ -79,6 +79,28 @@
 
 <article>
   <header>
+    <h2><a href="https://jameselliothart.github.io/todo-kata-python-part-3.html#todo-kata-python-part-3">Todo Kata - Python Part 3</a></h2>
+    <p>
+          Posted on October 30, 2020 in <a href="https://jameselliothart.github.io/category/tutorial.html">Tutorial</a>
+
+
+          &#8226;     Tagged with
+
+              <a href="https://jameselliothart.github.io/tag/tutorial.html">Tutorial</a>,              <a href="https://jameselliothart.github.io/tag/python.html">Python</a>,              <a href="https://jameselliothart.github.io/tag/todo.html">Todo</a>,              <a href="https://jameselliothart.github.io/tag/development.html">Development</a>,              <a href="https://jameselliothart.github.io/tag/sqlite.html">SQLite</a>
+    </p>
+  </header>
+  <div>
+      <p>Welcome to Part 3 of the Python Todo kata.
+In this final part, we will revisit the <code>done</code> application and modify it to work with a SQLite database instead of a text file.</p>
+<p>We will see that Python makes this very easy with its built-in integration with SQLite in the …</p>
+      <br>
+      <a class="btn" href="https://jameselliothart.github.io/todo-kata-python-part-3.html#todo-kata-python-part-3">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="https://jameselliothart.github.io/todo-kata-python-part-2.html#todo-kata-python-part-2">Todo Kata - Python Part 2</a></h2>
     <p>
           Posted on October 28, 2020 in <a href="https://jameselliothart.github.io/category/tutorial.html">Tutorial</a>
@@ -284,32 +306,6 @@ In this installment, we will explore The First Way: Systems Thinking.</p>
 <p>In an attempt to avoid the obfuscating effect of technical jargon, we will use a technology-agnostic scenario as the stage within which to …</p>
       <br>
       <a class="btn" href="https://jameselliothart.github.io/maps-of-devops-the-first-way.html#maps-of-devops-the-first-way">    Continue reading
-</a>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="https://jameselliothart.github.io/maps-of-devops-introduction.html#maps-of-devops-introduction">Maps of DevOps: Introduction</a></h2>
-    <p>
-          Posted on October 25, 2019 in <a href="https://jameselliothart.github.io/category/devops.html">DevOps</a>
-
-
-          &#8226;     Tagged with
-
-              <a href="https://jameselliothart.github.io/tag/devops.html">DevOps</a>,              <a href="https://jameselliothart.github.io/tag/mapsofmeaning.html">MapsOfMeaning</a>,              <a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a>
-    </p>
-  </header>
-  <div>
-      <h2>Welcome</h2>
-<p>This post marks the beginning of a multi-part series
-explaining the ideas of DevOps (that is, Development Operations).
-The target audience is primarily those
-unfamiliar with DevOps, and it is meant to
-be friendly even to those without a technical background who seek to
-understand the principles behind what …</p>
-      <br>
-      <a class="btn" href="https://jameselliothart.github.io/maps-of-devops-introduction.html#maps-of-devops-introduction">    Continue reading
 </a>
   </div>
 </article>
